--- a/about.html
+++ b/about.html
@@ -83,11 +83,11 @@
                     <h4>Hubungi Kami</h4>
                     <p>Email: anr656@gmail.com</p>
                     <p>Phone: +62 857-2228-8968</p>
-                    <p>Instagram: @anrfashion</p>
+                    <p>Instagram: @ANRfashion</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Adelia Fashion. All rights reserved.</p>
+                <p>&copy; 2025 ANR Fashion. All rights reserved.</p>
             </div>
         </div>
     </footer>
