mengubah harga main

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h3 class="product-name">Classic Silk Blouse</h3>
                         <p class="product-category">Tops</p>
                         <div class="product-footer">
-                            <span class="product-price">Rp 320.000</span>
+                            <span class="product-price">Rp 340.000</span>
                             <button class="btn-add-cart" onclick="addToCart('Classic Silk Blouse', 320000)">+ Keranjang</button>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <h3 class="product-name">Pleated Summer Skirt</h3>
                         <p class="product-category">Skirts</p>
                         <div class="product-footer">
-                            <span class="product-price">Rp 380.000</span>
+                            <span class="product-price">Rp 480.000</span>
                             <button class="btn-add-cart" onclick="addToCart('Pleated Summer Skirt', 380000)">+ Keranjang</button>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>ANR Fashion</h3>
-                    <p>Fashion eksklusif untuk wanita modern yang percaya diri dan elegan.</p>
+                    <p>Fashion eksklusif untuk wanita elegan modern yang percaya diri dan elegan.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
