--- a/about.html
+++ b/about.html
@@ -48,12 +48,12 @@
     <div class="container about-grid">
         <div class="about-text">
             <h2>Misi Kami</h2>
-            <p>ANR Fashion hadir untuk memberikan pilihan fashion berkualitas tinggi bagi wanita modern yang ingin tampil elegan, percaya diri, dan berkelas. Kami percaya bahwa setiap wanita pantas mendapatkan busana terbaik yang dapat merepresentasikan dirinya.</p>
+            <p>ANR Fashion hadir untuk memberikan pilihan fashion berkualitas tinggi bagi wanita modern yang ingin tampil elegan,menarik, percaya diri, dan berkelas. Kami percaya bahwa setiap wanita pantas mendapatkan busana terbaik yang dapat merepresentasikan dirinya.</p>
 
             <h2>Nilai Kami</h2>
             <ul class="about-list">
-                <li>✨ Material berkualitas premium</li>
-                <li>✨ Desain elegan dan eksklusif</li>
+                <li>✨ Material berkualitas premium dan bagus</li>
+                <li>✨ Desain elegan menarik dan eksklusif</li>
                 <li>✨ Kenyamanan untuk aktivitas sehari-hari</li>
                 <li>✨ Harga yang tetap terjangkau</li>
             </ul>
