--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/transition.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Transision-->
     <div id="transition-overlay"></div>
@@ -21,12 +23,14 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
-                <li><a href="about.html" >About</a></li>
-                <li><a href="contact.html"class="active">Contact</a></li>
-                <li><a href="cart.html" class="cart-link">
-                    <span class="cart-icon">🛍️</span>
-                    <span class="cart-count" id="cartCount">0</span>
-                </a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+                <li>
+                    <a href="cart.html" class="cart-link">
+                        <span class="cart-icon">🛍️</span>
+                        <span class="cart-count" id="cartCount">0</span>
+                    </a>
+                </li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -63,36 +67,37 @@
 </section>
 
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>ANR Fashion</h3>
-                    <p>Fashion eksklusif untuk wanita modern yang percaya diri dan elegan.</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="collection.html">Collection</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Hubungi Kami</h4>
-                    <p>Email: anr656@gmail.com</p>
-                    <p>Phone: +62 857-2228-8968</p>
-                    <p>Instagram: @anrfashion</p>
-                </div>
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>ANR Fashion</h3>
+                <p>Fashion eksklusif untuk wanita modern yang percaya diri dan elegan.</p>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 ANR Fashion. All rights reserved.</p>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Hubungi Kami</h4>
+                <p>Email: anr656@gmail.com</p>
+                <p>Phone: +62 857-2228-8968</p>
+                <p>Instagram: @anrfashion</p>
             </div>
         </div>
-    </footer>
+        <div class="footer-bottom">
+            <p>&copy; 2025 ANR Fashion. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 
-    <script src="js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
+
 </html>
