--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/transition.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Transision-->
     <div id="transition-overlay"></div>
@@ -23,10 +25,12 @@
                 <li><a href="collection.html">Collection</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html" class="cart-link">
-                    <span class="cart-icon">🛍️</span>
-                    <span class="cart-count" id="cartCount">0</span>
-                </a></li>
+                <li>
+                    <a href="cart.html" class="cart-link">
+                        <span class="cart-icon">🛍️</span>
+                        <span class="cart-count" id="cartCount">0</span>
+                    </a>
+                </li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -165,4 +169,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
