--- a/collection.html
+++ b/collection.html
@@ -71,105 +71,105 @@
             <!-- Card Produk Contoh -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 8.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 50.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 50000)">+ Keranjang</button>
+                        <span class="product-price">Rp 260.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 260000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 2.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 390.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 390000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 3.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 268.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 268000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 4.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 320.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 320000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 5.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 330.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 330000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 6.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 299.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 299000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 7.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 415.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 415000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                    <img src="images/catalog 8.jpg" alt="Elegant Dress">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Elegant Floral Dress</h3>
                     <p class="product-category">Dresses</p>
                     <div class="product-footer">
-                        <span class="product-price">Rp 450.000</span>
-                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 450000)">+ Keranjang</button>
+                        <span class="product-price">Rp 340.000</span>
+                        <button class="btn-add-cart" onclick="addToCart('Elegant Floral Dress', 340000)">+ Keranjang</button>
                     </div>
                 </div>
             </div>
