--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <div class="product-badge">New</div>
-                        <img src="https://images.unsplash.com/photo-1539008835657-9e8e9680c956?w=400" alt="Elegant Dress">
+                        <img src="images/benner homepage.jpg" alt="Elegant Dress">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Elegant Floral Dress</h3>
@@ -76,7 +76,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <div class="product-badge sale">Sale</div>
-                        <img src="https://images.unsplash.com/photo-1564257577-7fd07d5b305c?w=400" alt="Classic Blouse">
+                        <img src="images/catalog 1.jpg" alt="Classic Blouse">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Classic Silk Blouse</h3>
@@ -90,7 +90,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1551488831-00ddcb6c6bd3?w=400" alt="Summer Skirt">
+                        <img src="images/celana 1.jpg" alt="Summer Skirt">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Pleated Summer Skirt</h3>
