mengubah background pada index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <div class="product-badge">New</div>
-                        <img src="images/benner homepage.jpg" alt="Elegant Dress">
+                        <img src="images/catalog 10.jpg" alt="Elegant Dress">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Elegant Floral Dress</h3>
